# Computational-Photography-

./: README.md  计算摄影学笔记.md
HW1/: HW1-Interpolation.sln
HW1/HW1-Interpolation/: Assembly-CSharp.csproj
HW1/HW1-Interpolation/Assets/: interpolation.cs
HW1/HW1-Interpolation/Logs/: ApiUpdaterCheck.txt
HW1/HW1-Interpolation/ProjectSettings/: ProjectSettings.asset
HW2/HW2-BVH Loader/: Assembly-CSharp.csproj  HW2-BVH Loader.sln
HW2/HW2-BVH Loader/Assets/: BVHLoader.cs  BVHLoader2.cs
HW2/HW2-BVH Loader/Logs/: ApiUpdaterCheck.txt
HW2/HW2-BVH Loader/UserSettings/: EditorUserSettings.asset
HW3/HW3-Inverse Kinematics/: Assembly-CSharp.csproj  HW3-Inverse Kinematics.sln
HW3/HW3-Inverse Kinematics/Assets/: IK.cs
HW3/HW3-Inverse Kinematics/Logs/: ApiUpdaterCheck.txt
HW3/HW3-Inverse Kinematics/ProjectSettings/: ProjectSettings.asset
HW4/HW4-Skinning/: Assembly-CSharp.csproj  HW4-Skinning.sln
HW4/HW4-Skinning/Assets/: skinning.cs
HW4/HW4-Skinning/ProjectSettings/: ProjectSettings.asset
HW5/HW5/HW5-Mass Spring/: Assembly-CSharp.csproj  (+1 more)
HW6/HW6-FEM/: Assembly-CSharp.csproj  HW6-FEM.sln
Project1/Project1-Interactive Character Animation/: Assembly-CSharp-Editor.csproj  Assembly-CSharp.csproj  Project1-Interactive Character Animation.sln
Project2/Unity Project Simulation/: Assembly-CSharp.csproj  Unity Project Simulation.sln
Project3 1900017872/: CMakeLists.txt
Project3 1900017872/src/TheNextWeek/: aarect.h  box.h  hittable.h  hittable_list.h  main.cc  material.h  sphere.h
Project3 1900017872/src/common/: aabb.h  camera.h  ray.h  texture.h  vec3.h
(+37 files in other folders)
